--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div id="splash">
-  <img src="splash.png" alt="App Logo" />
+    <img src="splash.png" alt="App Logo" />
   </div>
+
   <div class="app">
     <header class="topbar">
       <button class="menu-btn" aria-label="menu">☰</button>
@@ -44,6 +45,9 @@
           <button id="adOnlyBtn" class="ad-only-btn" title="Open ad in new tab">Ad</button>
         </div>
       </div>
+
+      <!-- Typing indicator (shows for 5s before auto-reply) -->
+      <div id="typingIndicator" class="typing-indicator hidden">typing...</div>
 
       <div id="messages" class="messages"></div>
 
